@@ -8,6 +8,7 @@ DarkIce next release
       including support for MacOS X.
       Thanks to Nicholas J. Humfrey <njh@ecs.soton.ac.uk>
 	o various improvements by Joel Ebel <jbebel@ncsu.edu>
+	o added option to turn off automatic reconnect feature
 
 15-02-2004: DarkIce 0.14 released
 
